--- a/index.html
+++ b/index.html
@@ -52,6 +52,10 @@
             <a class="btn btn-light btn-lg" href="#" role="button">View more</a>
         </div>
 
+        <div class="container main-div" id="introductionMovie">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/XCy3238DCMg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+
         <div id="navAbout"></div>
         <div class="container main-div">
             <div id="appSummary">
