--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         </div>
 
         <div class="container main-div" id="introductionMovie">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/XCy3238DCMg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/nyp_PczrqFE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
 
         <div id="navAbout"></div>
@@ -79,7 +79,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Coming soon...</h5>
                         <p class="card-text">Sorry. We are under construction.<br></p>
-                        <a href="https://twitter.com/yozan626?s=09" class="btn">See more</a>
+                        <a href="#" class="btn">See more</a>
                     </div>
                 </div>
                 <div class="card">
@@ -87,7 +87,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Coming soon...</h5>
                         <p class="card-text">Sorry. We are under construction.</p>
-                        <a href="https://twitter.com/hemu10221?s=09" class="btn">See more</a>
+                        <a href="#" class="btn">See more</a>
                     </div>
                 </div>
             </div>
