--- a/index.html
+++ b/index.html
@@ -37,11 +37,8 @@
             </div>
         </nav>
 
-        <div class="alert alert-warning alert-dismissible fade show main-div" role="alert">
+        <div class="alert alert-warning fade show main-div" role="alert">
             <strong>Login failed!</strong> Email or password may be incorrect.
-            <button type="button" class="close" id="closeButton" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-            </button>
         </div>
 
         <div class="jumbotron main-div">
@@ -49,7 +46,7 @@
             <p class="lead">This is the introduction page to my app. The page will be improved sequentially. Take your time and enjoy!</p>
             <hr class="my-4">
             <p id="knowMore">Want to know more?</p>
-            <a class="btn btn-light btn-lg" href="#" role="button">View more</a>
+            <a class="btn btn-light btn-lg" href="#" role="button">Click here</a>
         </div>
 
         <div class="container main-div" id="introductionMovie">
