--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
         <div class="main-div" id="footer">
             <h2>Download for iOS</h2>
-            <p>I hope you enjoy this app!</p>
+            <p>Hope you enjoy this app!</p>
             <a href="https://www.apple.com/jp/ios/app-store/">
                 <img src="http://www.completewebdevelopercourse.com/content/5-bootstrap/App-Store-Icon.png">
             </a>
